--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@astrojs/tailwind": "^5.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/typography": "^0.5.15",
+    "appwrite": "^16.0.2",
     "astro": "^4.16.13",
     "date-fns": "^3.3.1",
     "gsap": "^3.12.5",
     "reading-time": "^1.5.0",
+    "resend": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "zod": "^3.23.8"
   }
