--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/markdown-remark": "^4.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
     "appwrite": "^16.0.2",
     "astro": "^4.16.13",
