--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@astrojs/markdown-remark": "^4.3.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@iconify/json": "^2.2.277",
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
     "appwrite": "^16.0.2",
     "astro": "^4.16.13",
+    "astro-icon": "^1.1.4",
     "date-fns": "^3.3.1",
     "gsap": "^3.12.5",
     "reading-time": "^1.5.0",
