--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/markdown-remark": "^4.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "@iconify/json": "^2.2.277",
@@ -22,9 +23,11 @@
     "astro-icon": "^1.1.4",
     "date-fns": "^3.3.1",
     "gsap": "^3.12.5",
-    "reading-time": "^1.5.0",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "wrangler": "^3.91.0"
   }
 }
