--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "strict": true,
     "types": ["astro/client"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", "src/**/*.astro"],
+  "exclude": ["node_modules", "dist"]
 }
