--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "target": "ES2020",
+    "module": "ES2020",
     "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": true,
