fix: language switching URLs and remove contact pages
- Fixed getRelativeURL function to prevent double slashes in language switching URLs
- Removed old contact pages and updated all links to get-in-touch
- Added placeholder README files for static assets

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "terser": "^5.37.0",
+    "typescript": "^5.7.2",
     "wrangler": "^3.91.0"
   }
 }
