--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "noImplicitAny": false,
     "types": ["astro/client"]
   },
   "include": ["src/**/*", "src/**/*.astro"],
