--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@astrojs/cloudflare": "^11.2.0",
     "@astrojs/markdown-remark": "^4.3.0",
     "@astrojs/partytown": "^2.1.2",
+    "@astrojs/react": "^4.1.2",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.0",
-    "@iconify/json": "^2.2.277",
+    "@iconify/json": "^2.2.289",
+    "@iconify/react": "^5.2.0",
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "appwrite": "^16.0.2",
     "astro": "^4.16.13",
-    "astro-icon": "^1.1.4",
     "date-fns": "^3.3.1",
     "gsap": "^3.12.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "zod": "^3.23.8"
