--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "prettier": "2.8.7",
     "terser": "^5.37.0",
     "typescript": "^5.7.2",
     "wrangler": "^3.91.0"
